[gd_scene load_steps=17 format=2]

[ext_resource path="res://images/menu/sick/leg_cast.png" type="Texture" id=1]
[ext_resource path="res://images/menu/sick/arm-cast.png" type="Texture" id=2]
[ext_resource path="res://images/menu/hospital.jpg" type="Texture" id=3]
[ext_resource path="res://prefab/continue_button.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/lose_sick.gd" type="Script" id=5]
[ext_resource path="res://music/Jingle_Lose_00.wav" type="AudioStream" id=7]
[ext_resource path="res://fonts/VCR_OSD_MONO_1.001.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://images/interface/dialogbox.png" type="Texture" id=9]
[ext_resource path="res://images/spritesheets/girl.png" type="Texture" id=10]
[ext_resource path="res://fonts/font-45.tres" type="DynamicFont" id=11]
[ext_resource path="res://images/interface/glassPanel.png" type="Texture" id=14]
[ext_resource path="res://prefab/fullscreen_icon.tscn" type="PackedScene" id=15]
[ext_resource path="res://prefab/audio-icon.tscn" type="PackedScene" id=16]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[node name="menu" type="Node2D"]
position = Vector2( -0.602722, 0 )
script = ExtResource( 5 )

[node name="hospital" type="Sprite" parent="."]
position = Vector2( 556.724, 286.952 )
texture = ExtResource( 3 )

[node name="girl" type="Sprite" parent="."]
position = Vector2( 586.261, 352.749 )
scale = Vector2( 5.08824, 5.08824 )
texture = ExtResource( 10 )
vframes = 5
hframes = 4

[node name="cast" type="Sprite" parent="girl"]
position = Vector2( 5.24756, 21.2751 )
scale = Vector2( 0.0411992, 0.0411992 )
texture = ExtResource( 1 )

[node name="arm-cast" type="Sprite" parent="girl"]
position = Vector2( -1.9071, 11.9719 )
scale = Vector2( 0.0949146, 0.0949146 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 29.986, 232, 106.742 )
region_filter_clip = true

[node name="dialog" type="Node2D" parent="."]

[node name="dialogbox" type="Sprite" parent="dialog"]
position = Vector2( 793.832, 178.224 )
texture = ExtResource( 9 )

[node name="dialog_text" type="RichTextLabel" parent="dialog"]
anchor_top = 0.00132736
anchor_bottom = 0.00132736
margin_left = 540.266
margin_top = 39.3476
margin_right = 1017.27
margin_bottom = 220.348
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="glass_text_box" type="Node2D" parent="."]
position = Vector2( 0, -88 )

[node name="glassPanel" type="Sprite" parent="glass_text_box"]
position = Vector2( 262.435, 390.344 )
scale = Vector2( 4.97102, 3.4572 )
texture = ExtResource( 14 )

[node name="girl_sick_text" type="RichTextLabel" parent="glass_text_box"]
visible = false
anchor_top = 0.00132736
anchor_bottom = 0.00132736
margin_left = 46.0
margin_top = 264.0
margin_right = 531.0
margin_bottom = 590.0
rect_scale = Vector2( 0.875875, 0.875875 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "You're sick with strong symptoms!

You spread COVID-19 to 2 people, who then spread it to 2 people, etc... 

You're responsible for 2,000 infections."
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption_text_english" type="RichTextLabel" parent="glass_text_box"]
anchor_top = 0.00132736
anchor_bottom = 0.00132736
margin_left = 46.1117
margin_top = 275.096
margin_right = 531.112
margin_bottom = 528.097
rect_scale = Vector2( 0.875875, 0.875875 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "You got hit by a driver not paying attention to the road."
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="caption_text_french" type="RichTextLabel" parent="glass_text_box"]
anchor_top = 0.00132736
anchor_bottom = 0.00132736
margin_left = 46.1117
margin_top = 275.096
margin_right = 531.112
margin_bottom = 528.097
rect_scale = Vector2( 0.875875, 0.875875 )
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
text = "Tu passes ta soir√©e aux urgences."
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="continue_button" parent="." instance=ExtResource( 4 )]
visible = false
modulate = Color( 0.423529, 0.423529, 0.423529, 1 )
position = Vector2( 0, 1.79749 )

[node name="button" type="Button" parent="continue_button"]
margin_left = -62.1124
margin_top = -24.2849
margin_right = 1151.89
margin_bottom = 630.715
custom_styles/focus = SubResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Node2D" parent="."]
modulate = Color( 0.462745, 0.462745, 0.462745, 1 )

[node name="exit" type="RichTextLabel" parent="exit"]
margin_left = 156.134
margin_top = 516.314
margin_right = 576.134
margin_bottom = 631.314
custom_fonts/normal_font = ExtResource( 11 )
text = "<<<EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="exit"]
margin_left = 160.297
margin_top = 509.152
margin_right = 338.297
margin_bottom = 565.152
custom_styles/focus = SubResource( 3 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Node2D" parent="."]

[node name="settings_audio" parent="settings" instance=ExtResource( 16 )]

[node name="settings_fullscreen" parent="settings" instance=ExtResource( 15 )]
position = Vector2( -2, 0 )

[node name="audio" type="Node2D" parent="."]

[node name="music" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 7 )
volume_db = -5.0
autoplay = true
bus = "music"
[connection signal="button_down" from="continue_button/button" to="." method="_on_continue_button_down"]
[connection signal="button_down" from="exit/Button" to="." method="_on_exit_button_down"]
